# ML-Forecasting_pub

./: .gitignore  README.md  docker-compose.yml  setup_newModel.py
dashboard/: 1_general_dashboard.py  Dockerfile  README.md  pyproject.toml
dashboard/pages/: 2_training.py  3_forecast_overview.py  4_documentation.py
influxData_api/: Dockerfile  README.md  main.py  pyproject.toml
influxData_api/data/: influxDB_client.py  module_data_splitter.py
influxData_api/data/data_validator/: __init__.py
influxData_api/data/data_validator/core/: __init__.py  validator.py
influxData_api/data/data_validator/io/: __init__.py  csv_handler.py  file_manager.py
influxData_api/data/data_validator/irr_gap_filling/: __init__.py  irr_gap_filler.py
influxData_api/data/data_validator/modes/: __init__.py  extended_avg_mode.py  standard_mode.py
influxData_api/data/data_validator/quantile_scaling/: __init__.py  scaling_calculator.py
influxData_api/data/data_validator/report_generation/: __init__.py  report_integration.py  validation_report_generator.py
influxData_api/data/data_validator/utils/: __init__.py  data_processor.py  validation_rules.py
influxData_api/data/data_validator/validation_methods/: __init__.py  correlation_validation.py  module_failure_detection.py  outlier_detection.py  range_validation.py
influxData_api/data_validator/: README.md
lstm_model/: Dockerfile  README_SINGLESTEP.md  requirements.txt
lstm_model_multistep/: README_MULTISTEP.md  pyproject.toml
model_manager/: Dockerfile  README.md  main.py  pyproject.toml
offline_tests/: README.md  (+8 more)
(+50 files in other folders)
